# ckanext-example

./: CHANGELOG.md  MANIFEST.in  README.md  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml  release-please.yml  test.yml
ckanext/example/: plugin.py
ckanext/example/plugins/default_group_type/: plugin.py
ckanext/example/plugins/default_group_type/i18n/: ckanext-example.pot
ckanext/example/plugins/default_group_type/i18n/de/LC_MESSAGES/: ckanext-example.mo  ckanext-example.po
ckanext/example/plugins/endpoint/: plugin.py
ckanext/example/plugins/endpoint/assets/: custom-css.css  webassets.yml
ckanext/example/plugins/endpoint/templates/: base.html
ckanext/example/plugins/endpoint/templates/organization/: new_tab.html  read_base.html
ckanext/example/plugins/search_index/: plugin.py
ckanext/example/plugins/theme/: plugin.py
ckanext/example/plugins/theme/assets/: styles.css  webassets.yml
ckanext/example/plugins/theme/templates/: page.html
ckanext/example/plugins/url_parser/: plugin.py
ckanext/example/plugins/vip_resource_downloads/: plugin.py
ckanext/example/tests/: test_plugin.py
