[metadata]
name = ckanext-example
version = 0.0.6

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/example/i18n/ckanext-example.pot
width = 80

[init_catalog]
domain = ckanext-example
input_file = ckanext/example/i18n/ckanext-example.pot
output_dir = ckanext/example/i18n

[update_catalog]
domain = ckanext-example
input_file = ckanext/example/i18n/ckanext-example.pot
output_dir = ckanext/example/i18n
previous = true

[compile_catalog]
domain = ckanext-example
directory = ckanext/example/i18n
statistics = true
